<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
        <item
            android:id="@+id/user_storage"
            android:icon="@drawable/ic_folder_shared_black_24dp"
            android:title="@string/my_storage" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_keyboard_return_black_24dp"
            android:title="@string/sign_out" />

        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/tools" />-->
    </group>
</menu>