<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserDetailsFragment">

    <ImageView
        android:id="@+id/user_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/user_image"
        android:src="@drawable/ic_person_black_72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="@+id/user_image_iv"
        app:layout_constraintStart_toStartOf="@+id/user_image_iv"
        app:layout_constraintTop_toBottomOf="@+id/user_image_iv" />

    <TextView
        android:id="@+id/user_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_mail_com"
        app:layout_constraintEnd_toEndOf="@+id/user_name_tv"
        app:layout_constraintStart_toStartOf="@+id/user_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/user_name_tv" />

    <TextView
        android:id="@+id/user_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/_99_9_9999_9999"
        app:layout_constraintEnd_toEndOf="@+id/user_email_tv"
        app:layout_constraintStart_toStartOf="@+id/user_email_tv"
        app:layout_constraintTop_toBottomOf="@+id/user_email_tv" />

</android.support.constraint.ConstraintLayout>