<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".view.activity.PostDetailsFragment">

    <TextView
        android:id="@+id/post_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details"
        android:textColor="#005c99"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postDate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/post_image_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <android.support.v4.view.ViewPager
        android:id="@+id/post_image_tv"
        android:layout_width="wrap_content"
        android:layout_height="393dp"
        android:layout_marginBottom="172dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_image_gray_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/post_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/object_description"
        android:textColor="@color/colorPrimaryText"
        android:drawableStart="@drawable/ic_textsms_black_24dp"
        android:drawablePadding="5dp"
        android:textSize="16sp"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_image_tv" />


    <TextView
        android:id="@+id/post_user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:text="@string/object_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_tv"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/post_user_phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:text="@string/object_contact"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_user_name_tv"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/post_user_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:text="@string/object_contact"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_user_phone_number_tv"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>